@@ -4,7 +4,7 @@ _______________.___.
  |    |  _//   |   |
  |    |   \\____   |
  |______  // ______|
-        \/ \/       
+        \/ \/
    _____         _______           ________        __________.__         ._____________   __________ 
   /  _  \   ____ \   _  \   ____   \_____  \___  __\______   |  |   ____ |__\__    _______\______   \
  /  /_\  \ /    \/  /_\  \ /    \    _(__  <\  \/  /|     ___|  |  /  _ \|  | |    |_/ __ \|       _/
@@ -157,6 +157,7 @@ def AnimeDownloader(url, subbed=False, dubbed=False, start=False, end=False, sin
 		Requires Lots Of Man Power XD
 		"""
 
+		referer = "https://animegg.org/embed/12345"
 		if single == False:
 			for links in _list:
 
@@ -188,15 +189,18 @@ def AnimeDownloader(url, subbed=False, dubbed=False, start=False, end=False, sin
 					if not(os.path.isdir(anime_path)):
 						os.mkdir(anime_path)
 
-				combination = website + file_link
+				combination = file_link
 				__file_name = (removeHTTP(links).replace("www.", "").replace("animegg.org", "").replace("/", "").replace("-", "_") + "_" + __vid_name).capitalize()
-				command 	= 'idman /d "' + str(combination) + '" /p "' + anime_path + '/" /f ' + str(__file_name) + ' /n'
+				### Use whatever program you want to download (uncomment the one you want, comment the one you don't :)
+				# command 	= 'idman /d "' + str(combination) + '" /p "' + anime_path + '/" /f ' + str(__file_name) + ' /n'
+				command         = "axel --num-connections=10 -a --header=\"Referer: " + referer + "\" --output=\"" + anime_path + "/" + __file_name + "\" " + combination
+				print(command)
 				os.system(command)
-				
+
 				while not(os.path.isfile(anime_path + "/" + __file_name)):
 					stdout.write("\r{}[{}!{}]{} {:<15}{}~> {}Downloading ...\r".format(w, y, w, c, "Status", w, y))
 					sleep(0.1)
-				
+
 				else:
 					sleep(0.1)
 					stdout.write("{}[{}#{}]{} {:<15}{}~> {}Completed{}\n\n".format(w, g, w, c, "Status", w, g, " " * 10))
@@ -237,13 +241,15 @@ def AnimeDownloader(url, subbed=False, dubbed=False, start=False, end=False, sin
 
 			combination = website + file_link
 			__file_name = (removeHTTP(__url).replace("#", "").replace("subbed", "").replace("dubbed", "").replace("raw", "").replace("www.", "").replace("animegg.org", "").replace("/", "").replace("-", "_") + "_" + __vid_name).capitalize()
-			command 	= 'idman /d "' + str(combination) + '" /p "' + anime_path + '/" /f ' + str(__file_name) + ' /n'
+			### Use whatever program you want to download (uncomment the one you want, comment the one you don't :)
+			#command 	= 'idman /d "' + str(combination) + '" /p "' + anime_path + '/" /f ' + str(__file_name) + ' /n'
+			command         = "axel --num-connections=10 -a --header=\"Referer: " + referer + "\" --output=\"" + anime_path + "/" + __file_name + "\" " + combination
+			print(command)
 			os.system(command)
-			
+
 			while not(os.path.isfile(anime_path + "/" + __file_name)):
 				stdout.write("\r{}[{}!{}]{} {:<15}{}~> {}Downloading ...\r".format(w, y, w, c, "Status", w, y))
 				sleep(0.1)
-			
 			else:
 				sleep(0.1)
 				stdout.write("{}[{}#{}]{} {:<15}{}~> {}Completed{}\n".format(w, g, w, c, "Status", w, g, " " * 10))
