@@ -134,12 +134,13 @@ try:
 	else:
 		AnimeDownloader(url=anime, subbed=True, dubbed=False, start=False, end=False, single=False)
 
-except NameError:
-	pass
+except NameError, e:
+	if "anime" in str(e):
+		pass
 
 except KeyboardInterrupt:
     write(var="~", color=w, data="{}Err0r{}: {}User Interrupted!{}".format(r, w, g, " " * 15))
-    
+
 except Exception, e:
     write(var="#", color=r, data="Err0r: Kindly Report the err0r below to An0n3xPloiTeR :) (If Your Internet's Working ;)\n\"\"\"\n" + str(e) + "\n\"\"\"")
 
